# cybrdelic-portfolio

./: .gitignore  Cargo.toml  README.md  copy.sh  index.html  restart.sh  source-code-collection.txt
content/projects/sagacity/: db_management.md
css/animations/: animations.css
css/layout/: projects.css
projects/browsealizer/: index.html
projects/commitaura/: index.html
projects/cybrdelic-portfolio/: index.html
projects/jjugg/: index.html
projects/myriad/: index.html
projects/resumatyk/: index.html
src/: lib.rs  main.rs  markdown.rs
src/config/: content.rs
src/handlers/: career_timeline.rs  contact.rs  home.rs  mod.rs  projects.rs  static_files.rs
src/models/: error.rs  mod.rs  project.rs
src/routes/: mod.rs
src/setup/: app_config.rs  mod.rs
static/: index.html  project-template.html
static/css/: README.md  base.css  career.css  contact.css  documentation.css  hero.css  main.css  project-detail.css  project-hero.css  projects.css  scroll-snap.css  style.css  whats_next.css
static/css/base/: animations.css  effects.css  reset.css  (+2 more)
static/js/: animations.js  documentation.js  glitch.js  main.js  projects.js  transitions.js
static/styles/: main.css
templates/: base.html  hero.html  index.html  project_detail.html  projects.html
templates/components/: related_projects.html  user_flows.html
templates/pages/: home.html  project.html
templates/partials/: contact.html  skills.html
templates/sections/: career.html  contact.html  cyber_button.html  future_section.html  hero.html  project_hero.html  projects.html  whats_next.html
(+59 files in other folders)
